--- a/scrambled-artwork-puzzle/src/index.css
+++ b/scrambled-artwork-puzzle/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+li {
+  list-style: none;
+  /* border-style: solid; */
+  /* padding: 0.5em; */
+}
+
+li div {
+  border-style: solid;
+}
