--- a/scrambled-artwork-puzzle/src/index.css
+++ b/scrambled-artwork-puzzle/src/index.css
@@ -12,11 +12,16 @@ code {
     monospace;
 }
 
+ul {
+  margin: 0.25em 2em;
+}
+
 
 li {
   list-style: none;
-  /* border-style: solid; */
-  /* padding: 0.5em; */
+  border-style: solid;
+  margin: 0.5em;
+  padding: 0.25em;
 
 }
 
@@ -32,12 +37,31 @@ li.active {
   color: #ffffff;
 }
 
+.option {
 
-
-/* li div {
-  border-style: solid;
-} */
+}
 
 .option img {
-  max-width: 5em;
+  max-width: 3em;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+/* .inline-item {
+  display: inline-block;
+} */
+
+li .flex-container {
+  justify-content: end;
+  margin: 0.25em
 }
