--- a/scrambled-artwork-puzzle/src/index.css
+++ b/scrambled-artwork-puzzle/src/index.css
@@ -75,3 +75,27 @@ li .flex-container {
 .footer {
   text-align: center;
 }
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* height: 100%; */
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
+}
+
+#root, .App {
+  width: 100%;
+  height: 100%;
+}
+
+/* .full-height {
+  width: 100%;
+  height: 100%;
+} */
+
+.flex-container canvas {
+  margin-top: 1em;
+}
